# comp3501-project

./: .gitignore  CMakeLists.txt  README.md  project_report.md
headers/: HoverTank.h  HoverTankTrack.h  HoverTankTurret.h  MachineGun.h  Scanner.h  ebo.h  game.h  input.h  path_config.h  resource.h  resource_manager.h  scene_node.h
include/: path_config.h  resource.h  resource_manager.h  vao.h
include/Control/: game.h  input.h  mathematics.h  path_config.h  resource.h  resource_manager.h  scene_graph.h  scene_node.h  time.h
include/Control/GUI/: component.h  menu.h  menu_item.h  menu_item_group.h
include/Control/GUI/Menus/: game_over.h  hud.h  main_menu.h  pause_menu.h  text_window.h  upgrades.h  you_win.h
include/Objects/: Artifact.h  CarePackage.h  ChaserEnemy.h  Enemy.h  EnergySource.h  EnvironmentObject.h  Player.h  Projectile.h  Rock.h  ShooterEnemy.h  Throwable.h  Tree.h  asteroid.h  particle.h  terrain.h
include/Objects/Hazards/: acid_pool.h  geyser.h  hazard.h  mud_pool.h
include/Objects/Hovertank/: hovertank.h  hovertank_track.h  hovertank_turret.h  machine_gun.h  scanner.h
include/Objects/Hovertank/Abilities/: EnergyEmitter.h  ability.h  energy_cannon.h  machine_gun.h
include/Objects/Projectiles/: Enemy_linear_projectile.h  EnergyBlast.h  linear_projectile.h  parabolic_projectile.h  projectile.h
include/Renderer/: camera.h
lib/: CMakeLists.txt
lib/include/GLFW/: glfw3native.h
res/meshes/: artifact.mesh  cube.mesh  enemy.mesh  parachute.mesh  rubber_bullet.mesh  sphere.mesh  spike_ball.mesh
res/meshes/environment/: plant.mesh  pool.mesh  rock1.mesh  rock2.mesh  rock3.mesh
res/meshes/hovertank/: hovertank_Chassis.mesh  hovertank_Chassis2.mesh  hovertank_Cylinder.mesh  hovertank_Gun_Stand.mesh  hovertank_Machine_Gun.mesh  hovertank_Scanner.mesh  hovertank_Scanner_Cone.mesh  hovertank_Track_Front.mesh  hovertank_Track_Rear.mesh  hovertank_Track_Rear2.mesh  hovertank_Turret.mesh  hovertank_Wheel_BL.mesh  hovertank_Wheel_BR.mesh  hovertank_Wheel_FL.mesh  hovertank_Wheel_FR.mesh
res/shaders/: artifact_particle_fp.glsl  artifact_particle_gp.glsl  artifact_particle_vp.glsl  corona_fp.glsl  energy_blast_shader_fp.glsl  energy_blast_shader_vp.glsl  geyser_particle_fp.glsl  geyser_particle_gp.glsl  geyser_particle_vp.glsl  instancing_fp.glsl  instancing_vp.glsl  lit_fp.glsl  lit_vp.glsl  material_fp.glsl  procedural_fp.glsl  screen_space_effect_fp.glsl  screen_space_effect_vp.glsl  simple_texture_vp.glsl  terrain_fp.glsl  terrain_vp.glsl
src/: CMakeLists.txt  HoverTank.cpp  HoverTankTrack.cpp  HoverTankTurret.cpp  MachineGun.cpp  Scanner.cpp  asteroid.cpp  camera.cpp  ebo.cpp  game.cpp  input.cpp  main.cpp  resource.cpp  resource_manager.cpp  scene_graph.cpp  scene_node.cpp  vao.cpp
src/Control/: CMakeLists.txt  game.cpp  input.cpp  resource.cpp  resource_manager.cpp  scene_graph.cpp  scene_node.cpp  time.cpp
src/Control/GUI/: CMakeLists.txt  component.cpp  menu.cpp  menu_item.cpp  menu_item_group.cpp
src/Control/GUI/Menus/: CMakeLists.txt  game_over.cpp  hud.cpp  main_menu.cpp  pause_menu.cpp  text_window.cpp  upgrades.cpp  you_win.cpp
src/Objects/: Artifact.cpp  CMakeLists.txt  CarePackage.cpp  ChaserEnemy.cpp  Enemy.cpp  EnergySource.cpp  EnvironmentObject.cpp  Player.cpp  Projectile.cpp  Rock.cpp  ShooterEnemy.cpp  Throwable.cpp  Tree.cpp  asteroid.cpp  particle.cpp  terrain.cpp
src/Objects/Hazards/: CMakeLists.txt  acid_pool.cpp  geyser.cpp  hazard.cpp  mud_pool.cpp
src/Objects/Hovertank/: CMakeLists.txt  hovertank.cpp  hovertank_track.cpp  hovertank_turret.cpp  machine_gun.cpp  scanner.cpp  scanner.h
src/Objects/Hovertank/Abilities/: CMakeLists.txt  EnergyEmitter.cpp  ability.cpp  energy_cannon.cpp  machine_gun.cpp
src/Objects/Projectiles/: CMakeLists.txt  Enemy_linear_projectile.cpp  EnergyBlast.cpp  linear_projectile.cpp  parabolic_projectile.cpp  projectile.cpp
src/Renderer/: CMakeLists.txt  camera.cpp  ebo.cpp  vao.cpp
